--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: shinyTextCompare
-Version: 0.1.1
+Version: 0.1.2
 Date: 2018-01-21
 Title: Shiny App for Line By Line Comparison of Two Files
 Authors@R: 
@@ -11,7 +11,8 @@ Authors@R:
 Description: A Shiny app that compares the text of two files using 
   drag and drop.
 Depends: R (>= 3.4)
-Imports: shiny (>= 1.0), mime
+Imports: shiny (>= 1.0), mime, htmltools
+Suggests: rstudioapi
 URL: https://github.com/msberends/shinyTextCompare
 BugReports: https://github.com/msberends/shinyTextCompare/issues
 License: GPL-2 | file LICENSE
